[build-system]
build-backend = "backend"
requires = [
  "setuptools>=67.8",
]
backend-path = [
  "_custom_build",
]

[project]
name = "pillow"
description = "Python Imaging Library (Fork)"
version = "11.1.0"
license = { text = "MIT-CMU" }
authors = [
  { name = "Jeffrey A. Clark", email = "aclark@aclark.net" },
]
requires-python = ">=3.9"

[tool.setuptools]
packages = [
  "PIL",
]
include-package-data = true
package-dir = { "" = "src" }

[tool.cibuildwheel]
before-all = ".github/workflows/wheels-dependencies.sh"
build-verbosity = 1

[tool.cibuildwheel.macos.environment]
PATH = "$(pwd)/build/deps/darwin/bin:$(dirname $(which python3)):/usr/bin:/bin:/usr/sbin:/sbin:/Library/Apple/usr/bin"
